# PySMan

./: .gitignore  README.md  SECURITY.md  pyproject.toml  setup.py
.github/workflows/: test.yml
src/PySMan/: ServiceManager.py
tests/: ClassWithDependencies.py  ClassWithDependenciesAndVariables.py  DependencyA.py  DependencyB.py  DependencyC.py  instantiation_test.py
