[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysman"
version = "0.1.0"
authors = [
  { name="busychild77", email="noemail@noemail.com" },
]
description = "Lightweight Service Manager for Python projects"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only"
license-files = ["LICENSE*"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pysman*"]

[project.urls]
Homepage = "https://github.com/noviplex/PySMan"
Issues = "https://github.com/noviplex/PySMan/issues"